--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,32 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OCR Extension</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h2>OCR Capture</h2>
-  <button id="capture-btn">Capture and Extract Text</button>
-  <div id="result"></div>
-
-  <script src="popup.js"></script>
-  <script src="libs/tesseract.min.js"></script>
-
-
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Screen Capture and OCR</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="px-4 py-5 my-5 text-center">
+      <h1 class="display-5 fw-bold text-body-emphasis">Screen Capture</h1>
+      <button id="capture-btn" type="button" class="btn btn-primary btn-lg px-4 gap-3">Capture Screen</button>
+      <div class="p-5 text-center bg-body-tertiary rounded-3">
+        <canvas class="canva" id="screenshot-canvas" ></canvas>
+      </div>
+      <div class="col-lg-6 mx-auto">
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+         
+          <button id="ocr-btn" type="button" class="btn btn-outline-secondary btn-lg px-4">Perform OCR</button>
+        </div>
+      </div> 
+    </div>
+    <div id="result" class="display-5  text-body-emphasis"><h1 class="display-5 fw-bold text-body-emphasis"></h1></div>
+  
+    <script src="popup.js"></script>
+  </body>
 </html>
+
+
+
+
